--- a/frontend_simple/templates/415.html
+++ b/frontend_simple/templates/415.html
@@ -1,6 +1,3 @@
-<!-- Show all users -->
-<!-- Show all user info -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -40,50 +37,17 @@
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto">
                     <div class="text-center">
-                        <h1 class="display-4 fw-bold mb-5"><span class="underline">Users</span></h1>
+                        <h1 class="display-4 fw-bold mb-5">Oops!</h1>
+                        <p class="fs-5 text-muted mb-5">Looks like we don't support the MIME-type you're looking for. Go <a href="/">home</a>.</p>
                     </div>
                 </div>
-                <!-- <div class="col-12 col-lg-10 mx-auto">
+                <div class="col-12 col-lg-10 mx-auto">
                     <div class="text-center position-relative"><img class="img-fluid" src="{{ url_for('static',filename='assets/img/illustrations/meeting.svg') }}" style="width: 800px;"></div>
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
-    <section>
-        <div class="container pt-4 pt-xl-5">
-            <div class="row pt-5">
-                <div class="col-md-8 text-center text-md-start mx-auto">
-                    <div class="card-columns">
-                        {% set users = data['users'] %}
-                        {% if users is none %}
-                            <p>There are no users</p>
-                        {% else %}
-                            {% for id in users %}
-                                {% set user = users[id] %}
-                                <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
-                                    <p class="card-text">{{ user['p'] }}</p>
-                                </div>
-
-                                {% if current_user.is_authenticated%}
-                                <div class="card-footer">
-                                    <button type="button" class="btn btn-primary">Edit</button>
-                                    <a href="/users/{{ user['p'].split('person')[1] }}">View profile</a>
-                                  </div>
-                                </div>
-                                {% endif %}
-
-                                
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-
-    </section>
+    <section></section>
     <section></section>
     <section></section>
     <footer>
