--- a/frontend_simple/templates/update_user.html
+++ b/frontend_simple/templates/update_user.html
@@ -40,7 +40,13 @@
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto">
                     <div class="text-center">
-                        <h1 class="display-4 fw-bold mb-5"><span class="underline">Users</span></h1>
+                        {% set users = data['users'] %}
+                        {% if 0 in users.keys() %}
+                        <h1 class="display-4 fw-bold mb-5"><span class="underline">{{ users[0]['name']+' '+users[0]['surname'] }}</span></h1>
+                        <p class="lead fw-normal text-muted mb-4">{{ users[0]['p'] }}</p>
+                        {% else %}
+                        <h1 class="display-4 fw-bold mb-5"><span class="underline">No user found</span></h1>
+                        {% endif %}
                     </div>
                 </div>
                 <!-- <div class="col-12 col-lg-10 mx-auto">
@@ -65,16 +71,7 @@
                                     <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
                                     <p class="card-text">{{ user['p'] }}</p>
                                 </div>
-
-                                {% if current_user.is_authenticated%}
-                                <div class="card-footer">
-                                    <button type="button" class="btn btn-primary">Edit</button>
-                                    <a href="/users/{{ user['p'].split('person')[1] }}">View profile</a>
-                                  </div>
                                 </div>
-                                {% endif %}
-
-                                
                             {% endfor %}
                         {% endif %}
                     </div>
