Remove edit button from users/id page

--- a/frontend_simple/templates/user.html
+++ b/frontend_simple/templates/user.html
@@ -66,7 +66,7 @@
                         {% else %}
                             {% for id in users %}
                                 {% set user = users[id] %}
-                                <div class="card">
+                                <div class="card mb-3">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
                                     <p class="card-text">{{ user['p'] }}</p>
