--- a/frontend_simple/templates/users.html
+++ b/frontend_simple/templates/users.html
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="/"><span class="underline">Home</span></a></li>
                     {% if current_user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="/users/{{current_user.id}}">My profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/profile">My profile</a></li>
                     <li class="nav-item"><a class="nav-link" href="/enterprises">My enterprises</a></li>
                     <li class="nav-item"><a class="nav-link" href="/connections">My connections</a></li>
                     <li class="nav-item"><a class="nav-link" href="/matches">My matches</a></li>
@@ -60,19 +60,16 @@
                         {% else %}
                             {% for id in users %}
                                 {% set user = users[id] %}
-                                <div class="card">
+                                <div class="card mb-3">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
                                     <p class="card-text">{{ user['p'] }}</p>
                                 </div>
 
-                                {% if current_user.is_authenticated%}
                                 <div class="card-footer">
-                                    <button type="button" class="btn btn-primary">Edit</button>
                                     <a href="/users/{{ user['p'].split('person')[1] }}">View profile</a>
                                   </div>
                                 </div>
-                                {% endif %}
 
                                 
                             {% endfor %}
