--- a/frontend_simple/templates/401.html
+++ b/frontend_simple/templates/401.html
@@ -1,6 +1,3 @@
-<!-- Show all users -->
-<!-- Show all user info -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +14,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span>LinkRec</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/"><span class="underline">Home</span></a></li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="/users/{{current_user.id}}">My profile</a></li>
                     <li class="nav-item"><a class="nav-link" href="/enterprises">My enterprises</a></li>
@@ -40,53 +37,17 @@
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto">
                     <div class="text-center">
-                        {% set users = data['users'] %}
-                        {% if 0 in users.keys() %}
-                        <h1 class="display-4 fw-bold mb-5"><span class="underline">{{ users[0]['name']+' '+users[0]['surname'] }}</span></h1>
-                        <p class="lead fw-normal text-muted mb-4">{{ users[0]['p'] }}</p>
-                        {% else %}
-                        <h1 class="display-4 fw-bold mb-5"><span class="underline">No user found</span></h1>
-                        {% endif %}
+                        <h1 class="display-4 fw-bold mb-5">Oops!</h1>
+                        <p class="fs-5 text-muted mb-5">Looks like you made an unauthorized request. Go <a href="/">home</a>.</p>
                     </div>
                 </div>
-                <!-- <div class="col-12 col-lg-10 mx-auto">
+                <div class="col-12 col-lg-10 mx-auto">
                     <div class="text-center position-relative"><img class="img-fluid" src="{{ url_for('static',filename='assets/img/illustrations/meeting.svg') }}" style="width: 800px;"></div>
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
-    <section>
-        <div class="container pt-4 pt-xl-5">
-            <div class="row pt-5">
-                <div class="col-md-8 text-center text-md-start mx-auto">
-                    <div class="card-columns">
-                        {% set users = data['users'] %}
-                        {% if not users %}
-                            <p>There are no users</p>
-                        {% else %}
-                            {% for id in users %}
-                                {% set user = users[id] %}
-                                <div class="card mb-3">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
-                                    <p class="card-text">{{ user['p'] }}</p>
-                                </div>     
-
-                                {% if current_user.is_authenticated and current_user.id == user['id'] %}
-                                <div class="card-footer">
-                                    <a class="btn btn-primary" href="/users/{{current_user.id}}/edit">Edit</a>
-                                  </div>
-                                </div>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-
-    </section>
+    <section></section>
     <section></section>
     <section></section>
     <footer>
