--- a/frontend_simple/templates/edit_user.html
+++ b/frontend_simple/templates/edit_user.html
@@ -42,8 +42,8 @@
                     <div class="text-center">
                         {% set users = data['users'] %}
                         {% if 0 in users.keys() %}
-                        <h1 class="display-4 fw-bold mb-5"><span class="underline">{{ users[0]['name']+' '+users[0]['surname'] }}</span></h1>
-                        <p class="lead fw-normal text-muted mb-4">{{ users[0]['p'] }}</p>
+                        <h1 class="display-4 fw-bold mb-5">Edit - <span class="underline">{{ users['name']+' '+users['surname'] }}</span></h1>
+                        <p class="lead fw-normal text-muted mb-4">{{ users['p'] }}</p>
                         {% else %}
                         <h1 class="display-4 fw-bold mb-5"><span class="underline">No user found</span></h1>
                         {% endif %}
@@ -59,27 +59,36 @@
         <div class="container pt-4 pt-xl-5">
             <div class="row pt-5">
                 <div class="col-md-8 text-center text-md-start mx-auto">
-                    <div class="card-columns">
-                        {% set users = data['users'] %}
-                        {% if users is none %}
-                            <p>There are no users</p>
-                        {% else %}
-                            {% for id in users %}
-                                {% set user = users[id] %}
-                                <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ user['name'] }} {{ user['surname'] }}</h5>
-                                    <p class="card-text">{{ user['p'] }}</p>
+                    <section class="position-relative py-4 py-l-5">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-md-8 col-xl-10 col-xxl-12">
+                                <div class="mb-5">
+                                    {% if users['id'] == current_user.id %}
+                                    <div class="card-body d-flex flex-column align-items-center">
+                                        <form class="text-center" method="POST" action="/users/{{ current_user.id }}">
+                                            <div class="mb-3"><input required class="form-control" type="text" name="name" placeholder="First name" value="{{ user['name'] }}"/></div>
+                                            <div class="mb-3"><input required class="form-control" type="text" name="surname" placeholder="Last name" value="{{ user['surname'] }}"/></div>
+                                            <div class="mb-3"><input required class="form-control" type="email" name="email" placeholder="Email" value="{{ current_user.email }}"/></div>
+                                            <div class="mb-3"><input required class="form-control" type="password" name="password" placeholder="Password"/></div>
+                                            <div class="mb-3"><input required class="form-control" type="password" name="passwordConfirmation" placeholder="Repeat your password" /></div>
+                                            <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Save</button></div>
+                                        </form>
+                                    </div>
+                                    {% else %}
+                                    This doesn't work.
+                                    {% endif %}
                                 </div>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
-                    </div>
+                            </div>
+                        </div>
+                        <div class="container"></div>
+                    </section>
+                </div>
+                <div class="col-12 col-lg-10 mx-auto">
+                    <div class="text-center position-relative"></div>
                 </div>
             </div>
         </div>
         
-
     </section>
     <section></section>
     <section></section>
