--- a/frontend_simple/templates/login_form.html
+++ b/frontend_simple/templates/login_form.html
@@ -47,8 +47,8 @@
                                     <div class=" mb-5">
                                         <div class="card-body d-flex flex-column align-items-center">
                                             <form class="text-center" method="POST" action="/login">
-                                                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email" /></div>
-                                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="email" name="email" placeholder="Email" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="password" name="password" placeholder="Password" /></div>
                                                 <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Login</button></div>
                                                 <!-- <p class="text-muted">Forgot your password?</p> -->
                                             </form>
