--- a/frontend_simple/templates/sign_up_form.html
+++ b/frontend_simple/templates/sign_up_form.html
@@ -47,10 +47,10 @@
                                     <div class="mb-5">
                                         <div class="card-body d-flex flex-column align-items-center">
                                             <form class="text-center" method="POST" action="/users">
-                                                <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="First name" /></div>
-                                                <div class="mb-3"><input class="form-control" type="text" name="surname" placeholder="Last name" /></div>
-                                                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email" /></div>
-                                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="text" name="name" placeholder="First name" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="text" name="surname" placeholder="Last name" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="email" name="email" placeholder="Email" /></div>
+                                                <div class="mb-3"><input required class="form-control" type="password" name="password" placeholder="Password" /></div>
                                                 <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Register</button></div>
                                                 <!-- <p class="text-muted">Forgot your password?</p> -->
                                             </form>
