--- a/frontend_simple/templates/users.html
+++ b/frontend_simple/templates/users.html
@@ -68,8 +68,11 @@
 
                                 {% if current_user.is_authenticated%}
                                 <div class="card-footer">
-                                    <button type="button" class="btn btn-primary">Edit</button>
-                                    <a href="/users/{{ user['p'].split('person')[1] }}">View profile</a>
+                                    {% if current_user.id == user['id']%}
+                                    <a class="btn btn-primary" href="/users/{{ user['id'] }}/edit">Edit</a>
+                                    {% endif %}
+
+                                    <a href="/users/{{ user['id'] }}">View profile</a>
                                   </div>
                                 </div>
                                 {% endif %}
