--- a/frontend_simple/templates/profile/edit.html
+++ b/frontend_simple/templates/profile/edit.html
@@ -17,7 +17,7 @@
                     <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item active"><a class="nav-link" href="/profile"><span class="underline">My profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/enterprises">My enterprises</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/enterprises">All enterprises</a></li>
                     <li class="nav-item"><a class="nav-link" href="/connections">My connections</a></li>
                     <li class="nav-item"><a class="nav-link" href="/matches">My matches</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
