--- a/frontend_simple/templates/skills.html
+++ b/frontend_simple/templates/skills.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"><a class="nav-link active" href="/"><span class="underline">Home</span></a></li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="/profile">My profile</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/enterprises">My enterprises</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/enterprises">All enterprises</a></li>
                     <li class="nav-item"><a class="nav-link" href="/connections">My connections</a></li>
                     <li class="nav-item"><a class="nav-link" href="/matches">My matches</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
